--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dopetrope by HTML5 UP</title>
+		<title>Tither</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,14 +18,14 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Dopetrope</a></h1>
+						<h1><a href="index.html">Tither</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">About</a>
 									<ul>
 										<li><a href="#">Lorem ipsum dolor</a></li>
 										<li><a href="#">Magna phasellus</a></li>
@@ -52,8 +52,8 @@
 					<!-- Banner -->
 						<section id="banner">
 							<header>
-								<h2>Howdy. This is Dopetrope.</h2>
-								<p>A responsive template by HTML5 UP</p>
+								<h2>Tither</h2>
+								<p>A New Way to Steward Your Mission</p>
 							</header>
 						</section>
 
@@ -64,27 +64,27 @@
 									<section class="first">
 										<i class="icon solid featured fa-cog"></i>
 										<header>
-											<h2>Ipsum consequat</h2>
+											<h2>Manage giving</h2>
 										</header>
-										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+										<p>Whether you are a generous donor, an organiztion, or a church, manage your giving in one place.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="middle">
 										<i class="icon solid featured alt fa-bolt"></i>
 										<header>
-											<h2>Magna etiam dolor</h2>
+											<h2>Streamline financial management</h2>
 										</header>
-										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+										<p>Consolidate forms, automatic giving, round-up giving, and more will enable you to focus on what matters - the impact.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
 									<section class="last">
 										<i class="icon solid featured alt2 fa-star"></i>
 										<header>
-											<h2>Tempus adipiscing</h2>
+											<h2>Personalized giving</h2>
 										</header>
-										<p>Nisl amet dolor sit ipsum veroeros sed blandit consequat veroeros et magna tempus.</p>
+										<p>Local giving campgaings, vital ministry awareness, and other giving campaigns centralized for more ways to give.</p>
 									</section>
 								</div>
 							</div>
@@ -210,7 +210,7 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 													<header>
-														<h3>Magna tempus consequat</h3>
+														<h3>Giving in 2025</h3>
 														<p>Posted 45 minutes ago</p>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
@@ -226,7 +226,7 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 													<header>
-														<h3>Aptent veroeros aliquam</h3>
+														<h3>Give beyond 10 percent</h3>
 														<p>Posted 45 minutes ago</p>
 													</header>
 													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
@@ -253,7 +253,7 @@
 							<div class="col-8 col-12-medium">
 								<section>
 									<header>
-										<h2>Blandit nisl adipiscing</h2>
+										<h2>Upcoming campaigns</h2>
 									</header>
 									<ul class="dates">
 										<li>
@@ -291,9 +291,8 @@
 									</header>
 									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
 									<p>
-										This is <strong>Dopetrope</strong> a free, fully responsive HTML5 site template by
-										<a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a> It's released for free under
-										the <a href="http://html5up.net/license/">Creative Commons Attribution</a> license so feel free to use it for any personal or commercial project &ndash; just don't forget to credit us!
+										This is <strong>Tither</strong> a streamlined giving app,
+										<a href="#">Tither Foundation/a> for <a href="#">Catholics anywhere</a> It's a work in progress!
 									</p>
 									<footer>
 										<ul class="actions">
@@ -369,7 +368,7 @@
 								<!-- Copyright -->
 									<div id="copyright">
 										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Tither: A New Way to Steward Your Mission All rights reserved.</li><li>Design: <a href="#">More</a></li>
 										</ul>
 									</div>
 
@@ -389,4 +388,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
