--- a/Pages/dashboard.html
+++ b/Pages/dashboard.html
@@ -1,19 +1,19 @@
 
 import React, { useState, useEffect } from 'react';
-import { Organization } from '@/entities/Organization';
-import { Campaign } from '@/entities/Campaign';
-import { Transaction } from '@/entities/Transaction';
-import { ImpactMetric } from '@/entities/ImpactMetric';
-import { RoundUp } from '@/entities/RoundUp';
-import { User } from '@/entities/User';
-import HamburgerMenu from '@/components/HamburgerMenu';
-import BottomNav from '@/components/BottomNav';
-import StatCard from '@/components/StatCard';
-import OrganizationCard from '@/components/OrganizationCard';
-import CampaignCard from '@/components/CampaignCard';
-import { Button } from '@/components/ui/button';
-import { Tabs, TabsContent, TabsList, TabsTrigger } from '@/components/ui/tabs';
-import { Card } from '@/components/ui/card';
+import { Organization } from 'entities/Organization';
+import { Campaign } from 'entities/Campaign';
+import { Transaction } from 'entities/Transaction';
+import { ImpactMetric } from 'entities/ImpactMetric';
+import { RoundUp } from 'entities/RoundUp';
+import { User } from 'entities/User';
+import HamburgerMenu from 'components/HamburgerMenu';
+import BottomNav from 'components/BottomNav';
+import StatCard from 'components/StatCard';
+import OrganizationCard from 'components/OrganizationCard';
+import CampaignCard from 'components/CampaignCard';
+import { Button } from 'components/ui/button';
+import { Tabs, TabsContent, TabsList, TabsTrigger } from 'components/ui/tabs';
+import { Card } from 'components/ui/card';
 import { DollarSign, Building2, TrendingUp, Heart, Sparkles, Coins } from 'lucide-react';
 import { LineChart, Line, XAxis, YAxis, CartesianGrid, Tooltip, ResponsiveContainer } from 'recharts';
 import { Link } from 'react-router-dom';
