--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ T
 -->
 <html>
 	<head>
+		<link rel="icon" type="image/png" href="images/tabnail.png" />
 		<title>Tither</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -346,5 +347,6 @@ T
 	</body>
 
 </html>
+
 
 
