--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ T
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/dashboard.png" alt="" /></a>
 													<header>
 														<h3>Impact Dashboard</h3>
 													</header>
@@ -125,7 +125,7 @@ T
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/campaigns.png" alt="" /></a>
 													<header>
 														<h3>Community & Campaign's</h3>
 													</header>
@@ -139,7 +139,7 @@ T
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/roundup.png" alt="" /></a>
 													<header>
 														<h3>Round-up Giving</h3>
 													</header>
@@ -347,6 +347,7 @@ T
 	</body>
 
 </html>
+
 
 
 
