--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ T
 													<header>
 														<h3>Impact Dashboard</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>See the real difference your generosity makes — in real time. Track giving trends, community milestones, and project outcomes all in one place. Your stewardship deserves clarity.</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button alt">Find out more</a></li>
@@ -129,7 +129,7 @@ T
 													<header>
 														<h3>Community & Campaign's</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Join a growing network of missions, ministries, and everyday givers united by purpose. Start or support campaigns that move hearts and fund the work that matters most.</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button alt">Find out more</a></li>
@@ -143,7 +143,7 @@ T
 													<header>
 														<h3>Round-up Giving</h3>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+													<p>Turn everyday purchases into lasting impact. Link your card, round up spare change automatically, and watch small moments become big movements for good.</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button alt">Find out more</a></li>
@@ -347,6 +347,7 @@ T
 	</body>
 
 </html>
+
 
 
 
