--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@ T
 													<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 													<header>
 														<h3>Giving in 2025</h3>
-														<p>Posted 45 minutes ago</p>
+														<p>Written by Anon.</p>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+													<p>The way we give is changing — but the heart behind it never will. In 2025, churches and ministries are embracing tools that make generosity simpler, more transparent, and more consistent. Discover how digital stewardship is helping believers turn conviction into consistent impact.</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button icon solid fa-file-alt">Continue Reading</a></li>
-															<li><a href="#" class="button alt icon solid fa-comment">33 comments</a></li>
+															<li><a href="#" class="button alt icon solid fa-comment">0 comments</a></li>
 														</ul>
 													</footer>
 												</section>
@@ -184,13 +184,13 @@ T
 													<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 													<header>
 														<h3>Give beyond 10 percent</h3>
-														<p>Posted 45 minutes ago</p>
+														<p>Written by Anon.</p>
 													</header>
-													<p>Lorem ipsum dolor sit amet sit veroeros sed et blandit consequat sed veroeros lorem et blandit adipiscing feugiat phasellus tempus hendrerit, tortor vitae mattis tempor, sapien sem feugiat sapien, id suscipit magna felis nec elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos lorem ipsum dolor sit amet.</p>
+													<p>Tithing is just the beginning. God invites us to see generosity not as a rule, but as a rhythm — a way of life that extends into every corner of our day. Learn how intentional, recurring, and round-up giving can expand your mission and transform the lives around you.</p>
 													<footer>
 														<ul class="actions">
 															<li><a href="#" class="button icon solid fa-file-alt">Continue Reading</a></li>
-															<li><a href="#" class="button alt icon solid fa-comment">33 comments</a></li>
+															<li><a href="#" class="button alt icon solid fa-comment">0 comments</a></li>
 														</ul>
 													</footer>
 												</section>
@@ -347,6 +347,7 @@ T
 	</body>
 
 </html>
+
 
 
 
