--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ T
 									<header>
 										<h2>What's this all about?</h2>
 									</header>
-									<a href="#" class="image featured"><img src="images/pic10.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/tabnail.png" alt="" /></a>
 									<p>
 										This is <strong>Tither</strong> a streamlined giving app,
 										<a href="#">Tither Foundation/a> for <a href="#">Catholics anywhere</a> It's a work in progress!
@@ -347,6 +347,7 @@ T
 	</body>
 
 </html>
+
 
 
 
