--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@ T
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="homepage is-preload">
+		<!-- Top-Left Logo -->
+	<a href="index.html">
+  	<img src="images/tabnail.png" alt="Tither Logo" id="top-left-logo">
+	</a>
+
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -347,6 +352,7 @@ T
 	</body>
 
 </html>
+
 
 
 
