--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -62,6 +62,11 @@
 									<h2>No Sidebar</h2>
 									<p>Lorem ipsum dolor sit amet feugiat</p>
 								</header>
+								<iframe 
+    								src="https://tithr-5767d289.base44.app/" 
+    								style="width:100%; height:100vh; border:none;"
+    								title="Tithr App">
+									</iframe>
 								<p>
 									Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
 									hendrerit libero placerat. Nulla facilisi. Proin aliquam felis non arcu molestie at accumsan turpis commodo.
@@ -260,4 +265,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
