Update and rename app to app.html

--- a/app.html
+++ b/app.html
@@ -9,12 +9,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   
   <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
 
   <header>
-    <img src="assets/thumbnail.png" alt="Tithr Logo" class="logo">
+    <img src="/assets/tabnail.png" alt="Tithr Logo" class="logo">
     <h1>Welcome to Tithr</h1>
     <p>Enterprise-level tithing app, beta launch.</p>
   </header>
@@ -38,6 +38,6 @@
   </footer>
 
   <!-- JS -->
-  <script src="app.js"></script>
+  <script src="/assets/app.js"></script>
 </body>
 </html>
