--- a/app.html
+++ b/app.html
@@ -65,8 +65,10 @@
 								<iframe 
     								src="https://tithr-5767d289.base44.app/" 
     								style="width:100%; height:100vh; border:none;"
+									allow="payment; camera; microphone"
     								title="Tithr App">
 									</iframe>
+						
 								<p>
 									Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
 									hendrerit libero placerat. Nulla facilisi. Proin aliquam felis non arcu molestie at accumsan turpis commodo.
@@ -267,3 +269,4 @@
 	</body>
 
 </html>
+
