--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ TRISK
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="left-sidebar.html">Solutions</a></li>
+								<li><a href="right-sidebar.html">About Tither</a></li>
+								<li><a href="app.html">Try Tither!</a></li>
 							</ul>
 						</nav>
 
@@ -352,6 +352,7 @@ TRISK
 	</body>
 
 </html>
+
 
 
 
