--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ TRISK
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Solutions</a></li>
-								<li><a href="right-sidebar.html">About Tither</a></li>
+								<li><a href="right-sidebar.html">Blog</a></li>
 								<li><a href="app.html">Try Tither!</a></li>
 							</ul>
 						</nav>
@@ -352,6 +352,7 @@ TRISK
 	</body>
 
 </html>
+
 
 
 
