--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@ TRISK
 								<li>
 									<a href="#">About</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="#">The Mission</a></li>
+										<li><a href="#">The Team</a></li>
+										<li><a href="#">The State of Giving</a></li>
 										<li>
-											<a href="#">Phasellus consequat</a>
+											<a href="#">The App</a>
 											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
+												<li><a href="#">Dashboard</a></li>
+												<li><a href="#">Discover</a></li>
+												<li><a href="#">Impact</a></li>
+												<li><a href="#">Campaigns</a></li>
+												<li><a href="#">Round-Up Giving</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="#">Solutions</a></li>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Solutions</a></li>
@@ -352,6 +352,7 @@ TRISK
 	</body>
 
 </html>
+
 
 
 
