--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ TRISK
 								</li>
 								<li><a href="left-sidebar.html">Solutions</a></li>
 								<li><a href="right-sidebar.html">Impact</a></li>
-								<li><a href="app/">Try Tither!</a></li>
+								<li><a href="app/index.html">Try Tither!</a></li>
 							</ul>
 						</nav>
 
