--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,9 @@
       import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
       const supabase = createClient(
-        "https://YOUR_PROJECT_ID.supabase.co",
-        "YOUR_SUPABASE_PUBLIC_ANON_KEY"
-      );
+  "https://iqeaysusoxnjvdipxsme.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlxZWF5c3Vzb3huanZkaXB4c21lIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE4NDQ4MDksImV4cCI6MjA3NzQyMDgwOX0.TJuEkX7IWVK3eed7BcRWpOV60CVtEvZMbCR641udbqM"
+);
 
       // Check if user is logged in
       const user = JSON.parse(localStorage.getItem("titherUser"));
