--- a/app/login.html
+++ b/app/login.html
@@ -25,6 +25,55 @@
     </div>
 
     <script type="module" src="/app/js/login.js"></script>
+    <script type="module">
+  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+
+  const supabaseUrl = 'https://iqeaysusoxnjvdipxsme.supabase.co';
+  const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlxZWF5c3Vzb3huanZkaXB4c21lIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE4NDQ4MDksImV4cCI6MjA3NzQyMDgwOX0.TJuEkX7IWVK3eed7BcRWpOV60CVtEvZMbCR641udbqM';
+  const supabase = createClient(supabaseUrl, supabaseKey);
+
+  const loginBtn = document.getElementById("loginBtn");
+  const signupBtn = document.getElementById("signupBtn");
+
+  async function handleAuth(action) {
+    const email = prompt("Enter your email:");
+    const password = prompt("Enter your password:");
+
+    if (!email || !password) {
+      alert("Email and password are required!");
+      return;
+    }
+
+    if (action === "signup") {
+      const { data, error } = await supabase.auth.signUp({ email, password });
+      if (error) {
+        alert(error.message);
+      } else {
+        // Add a blank profile record for the new user
+        await supabase.from("profiles").insert([
+          { id: data.user.id, full_name: "", organization: "" }
+        ]);
+        alert("Sign up successful! Please check your email to confirm.");
+      }
+    }
+
+    if (action === "login") {
+      const { data, error } = await supabase.auth.signInWithPassword({ email, password });
+      if (error) {
+        alert(error.message);
+      } else {
+        alert("Login successful!");
+        // Example: redirect to your dashboard
+        window.location.href = "/app/dashboard.html";
+      }
+    }
+  }
+
+  loginBtn.addEventListener("click", () => handleAuth("login"));
+  signupBtn.addEventListener("click", () => handleAuth("signup"));
+</script>
+
   </body>
 </html>
+
 
