--- a/app/login.html
+++ b/app/login.html
@@ -64,7 +64,7 @@
       } else {
         alert("Login successful!");
         // Example: redirect to your dashboard
-        window.location.href = "/app/dashboard.html";
+        window.location.href = "/app/index.html";
       }
     }
   }
@@ -75,5 +75,6 @@
 
   </body>
 </html>
+
 
 
